--- a/SNNS_Core/SNNS_Core.csproj
+++ b/SNNS_Core/SNNS_Core.csproj
@@ -4,4 +4,12 @@
     <TargetFramework>netcoreapp3.1</TargetFramework>
   </PropertyGroup>
 
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
+    <DocumentationFile>D:\RepositoryW\SNNS\SNNS_Core\SNNS_Core.xml</DocumentationFile>
+  </PropertyGroup>
+
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
+    <DocumentationFile>D:\RepositoryW\SNNS\SNNS_Core\SNNS_Core.xml</DocumentationFile>
+  </PropertyGroup>
+
 </Project>
