--- a/SNNS_Models/SNNS_Models.csproj
+++ b/SNNS_Models/SNNS_Models.csproj
@@ -1,7 +1,15 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>netcoreapp3.1</TargetFramework>
+  </PropertyGroup>
+
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
+    <DocumentationFile>D:\RepositoryW\SNNS\SNNS_Models\SNNS_Models.xml</DocumentationFile>
+  </PropertyGroup>
+
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
+    <DocumentationFile>D:\RepositoryW\SNNS\SNNS_Models\SNNS_Models.xml</DocumentationFile>
   </PropertyGroup>
 
   <ItemGroup>
